Fix bug with spacing on search results

--- a/cardDatabase/static/css/search.css
+++ b/cardDatabase/static/css/search.css
@@ -5,6 +5,10 @@
     box-shadow: none;
 }
 
+.card:not(:last-child){
+    padding-right: 5px;
+}
+
 .card-img{
     width: 300px;
 }
